--- a/games/horror/outlast2.html
+++ b/games/horror/outlast2.html
@@ -33,7 +33,7 @@
     <header id="main-header">
         <div class="container">
             <div class="logotype">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="/assets/upload/social_logo.png" class="img-responsive" />
                 </a>
             </div>
@@ -134,7 +134,7 @@
                         <div class="image"><img src="http://www.gamedeus.ru/images/games/O/outlast-2/outlast-2-05.jpg" alt=""></div>
                         <div class="image"><img src="https://images.stopgame.ru/screenshots/15461/outlast_ii-7.jpg" alt=""></div>
                         <div class="image"><img src="https://www.newgamenetwork.com/images/uploads/gallery/Outlast2/Outlast2_12.jpg" alt=""></div>
-                        <div class="image"><img src="https://vignette.wikia.nocookie.net/villains/images/1/11/What-we-know-about-the-outlast-2-story-1.jpg/revision/latest?cb=20170629223227" alt=""></div>
+                        <div class="image"><img src="https://images.techhive.com/images/article/2017/04/20170420230817_1-100720390-orig.jpg" alt=""></div>
                     </div>
                 </div>
                 <div class="description">
