--- a/index-horror.html
+++ b/index-horror.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Хоррор</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -31,7 +31,7 @@
     <header id="main-header">
         <div class="container">
             <div class="logotype">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="https://ru.ign.com/s/ign/social_logo.png" class="img-responsive" />
                 </a>
             </div>
@@ -47,44 +47,7 @@
 
                 <li>
                     <a href="#block-2">Жанры</a>
-                    <div class="submenu">
-                        <div class="block-items">
-                            <div class="block-item">
-                                <a href="index-horror.html">
-                                    <span class="image">
-                                        <img src="upload/maxresdefault.jpg" alt="" class="img-responsive">
-                                    </span>
-                                    <span class="title">Хоррор</span>
-                                </a>
-                            </div>
-
-                            <div class="block-item">
-                                <a href="index-action.html">
-                                    <span class="image">
-                                        <img src="upload/infinite-warfare-2-800x445.jpg" alt="" class="img-responsive">
-                                    </span>
-                                    <span class="title">Шутеры</span>
-                                </a>
-                            </div>
-                            <div class="block-item">
-                                <a href="index-strategy.html">
-                                    <span class="image">
-                                        <img src="upload/2cf85a2a36d80da8_848x477.jpg" alt="" class="img-responsive">
-                                    </span>
-                                    <span class="title">Стратегия</span>
-                                </a>
-                            </div>
-                            <div class="block-item">
-                                <a href="#">
-                                    <span class="image">
-                                        <img src="https://st2.depositphotos.com/1186248/7904/i/450/depositphotos_79044858-stock-photo-opening-soon.jpg" alt="" class="img-responsive">
-                                    </span>
-                                    <span class="title"></span>
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
+                    
                 </li>
                 <li>
                     <a href="#block-3">Видео</a>
@@ -120,8 +83,10 @@
     </nav>
     <main>
         <div class="container">
-            <section id="block-2">
-                <h2 class="title">Популярные игры в данном жанре</h2>
+            <section id="block-2" class="inner-bg inner-bg-horror">
+                <h2 class="title">
+                    <span>Хоррор</span>
+                </h2>
                 <div class="content">
                     <div class="block-games">
                         <a href="/games/horror/outlast.html" class="block-game">
