--- a/games/horror/friday 15th.html
+++ b/games/horror/friday 15th.html
@@ -33,7 +33,7 @@
     <header id="main-header">
         <div class="container">
             <div class="logotype">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="/assets/upload/social_logo.png" class="img-responsive" />
                 </a>
             </div>
