--- a/index-action.html
+++ b/index-action.html
@@ -31,7 +31,7 @@
     <header id="main-header">
         <div class="container">
             <div class="logotype">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="https://ru.ign.com/s/ign/social_logo.png" class="img-responsive" />
                 </a>
             </div>
