--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
     <main>
 
-        <section id="block-1">
+        <section id="block-1" class="bg-game">
             <div class="container">
 
                 <h2 class="title">О нас</h2>
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section id="block-3" >
+        <section id="block-3" class="bg-game" >
             <div class="container" >
             
                 <h2 class="title">Видео</h2>
@@ -153,7 +153,7 @@
                 </div>
 
             </section>
-            <section id="block-4">
+            <section id="block-4" class="bg-game">
                     <div class="container">
                 <h2 class="title">Команды</h2>
                 <div class="content">
